# hecate-embed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Containerfile  LICENSE  README.md  rebar.config
.github/workflows/: build-push.yml  lint.yml
config/: sys.config.src  vm.args.src
guides/: getting_started.md
native/hecate_embed_nif/: Cargo.toml  README.md
native/hecate_embed_nif/src/: lib.rs
scripts/: build-nif.sh  fetch-model.sh  prefetch-model.sh
src/: hecate_embed.app.src  hecate_embed.erl  hecate_embed_app.erl  hecate_embed_http.erl  hecate_embed_model.erl  hecate_embed_model_sup.erl  hecate_embed_nif.erl  hecate_embed_server.erl  hecate_embed_sup.erl
test/: hecate_embed_SUITE.erl
